<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_task_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_task_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            tools:text="@string/example_text"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_task_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_task_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            tools:text="@string/example_text"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_created"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_task_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            tools:text="@string/example_text"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/show_task_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_finished"
            android:visibility="invisible"
            android:textSize="20sp"
            tools:text="@string/example_text"/>

        <TextView
            android:id="@+id/show_task_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            tools:text="@string/example_text"
            android:layout_marginStart="10dp" />

        <ImageView
            android:id="@+id/show_task_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_report_image" />
    </LinearLayout>

</LinearLayout>